RESOLVED FIXED26813
Fix issues caused by upstreaming V8Proxy
https://bugs.webkit.org/show_bug.cgi?id=26813
Summary Fix issues caused by upstreaming V8Proxy
Nate Chapin
Reported 2009-06-29 13:51:39 PDT
See summary.
Attachments
patch (2.39 KB, patch)
2009-06-29 13:53 PDT, Nate Chapin
dglazkov: review+
Nate Chapin
Comment 1 2009-06-29 13:53:16 PDT
Dimitri Glazkov (Google)
Comment 2 2009-06-29 13:54:46 PDT
Comment on attachment 32020 [details] patch r=me!
Nate Chapin
Comment 3 2009-06-29 14:00:07 PDT
Landed at r45352.
Note You need to log in before you can comment on or make changes to this bug.