2009-06-29  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix a couple of bad merge items from my previous V8Proxy patch.

        https://bugs.webkit.org/show_bug.cgi?id=26813



Canonical link: https://commits.webkit.org/37035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45352 268f45cc-cd09-0410-ab3c-d52691b4dbfc