WebCore/bindings/v8/V8Collection.h
@@ -98,7 +98,7 @@ namespace WebCore {
         // properties.
         if (info.Holder()->HasRealNamedCallbackProperty(name))
             return notHandledByInterceptor();
-        Collection* collection = V8Proxy::DOMWrapperToNode<Collection>(info.Holder());
+        Collection* collection = V8Proxy::convertDOMWrapperToNode<Collection>(info.Holder());
         String propertyName = toWebCoreString(name);
         void* implementation = collection->namedItem(propertyName);
         return getV8Object(implementation, info.Data());
